objects/Customer_Service__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(ISBLANK(Term_Date__c),IMAGE("/servlet/servlet.FileDownload?file=01560000001jIr0", "Start", 20, 20),IF(Term_Date__c &lt; Today (),IMAGE("/servlet/servlet.FileDownload?file=01560000001jIr0", "Start", 20, 20),IMAGE("/servlet/servlet.FileDownload?file=01560000001jIqv", "Start", 20, 20)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If it is Green record is active, if it is Red record is not active</inlineHelpText>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member Services</fullName>
                </value>
                <value>
                    <fullName>Provider Services</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Area</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <formula>CASE( Area__c , 
"Member Services", 1, 
"Provider Services", 2, 
"Pharmacy", 3, 
"Dental", 4, 
"Vision", 5, 
"Life Insurance", 6, 
"Other", 7, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Hours__c</fullName>
        <label>Service Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>24/7 - 363 Days</fullName>
                </value>
                <value>
                    <fullName>24/7 - 365 Days</fullName>
                </value>
                <value>
                    <fullName>Custom/Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Number__c</fullName>
        <label>Service Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-PGA</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Date_Verification__c</fullName>
        <description>If term date is blank or term date is less than current date then it is active (US369)</description>
        <formula>/*OR(NOT(ISBLANK(Term_Date__c)), TODAY() &gt; Term_Date__c) 
if(NOT(ISBLANK(Term_Date__c)),if(TODAY() &lt; Term_Date__c,true,false) , false)*/ 

If(Not(ISBLANK(Term_Date__c)),IF(Term_Date__c &lt; Today(),true,false),false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Date Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <label>AIA Customer Service</label>
    <nameField>
        <displayFormat>CS-{000}</displayFormat>
        <label>Customer Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Service Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>CS001</fullName>
        <active>true</active>
        <description>CS001: If service hours is 'Other' then comments field cannot be blank. Please verify the below records</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; ( Text( Service_Hours__c )='Custom/Other' &amp;&amp; ISBLANK( Comments__c ))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>CS001: Please enter Comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CS002</fullName>
        <active>true</active>
        <description>CS002: If Area is 'Other' then Other Area field cannot be blank. Please verify the below records</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; ( Text( Area__c )='Other' &amp;&amp; ISBLANK( Other_Area__c ))</errorConditionFormula>
        <errorDisplayField>Other_Area__c</errorDisplayField>
        <errorMessage>CS002: Please enter Value for Other Field below.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CS003</fullName>
        <active>true</active>
        <description>CS003: Please enter a valid Phone Number. Please verify the below records</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; AND( 
NOT(ISBLANK( Phone_Number__c )), 
LEN(Phone_Number__c) &lt; 10 
)</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>CS003: Enter Valid Phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CS004</fullName>
        <active>true</active>
        <description>CS004: If Area is not 'Other' then Other Area field cannot have value. Please verify the below records</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 

IF(Text(Area__c)!='Other',IF(Not(ISBLANK( Other_Area__c )),true,false),false)</errorConditionFormula>
        <errorDisplayField>Other_Area__c</errorDisplayField>
        <errorMessage>CS004: You cannot have value in Other Field below</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CS005</fullName>
        <active>true</active>
        <description>CS005: Term Date cannot be lesser than Effective Date</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; (IF( Term_Date__c &lt;  Effective_Date__c ,true,false))</errorConditionFormula>
        <errorDisplayField>Term_Date__c</errorDisplayField>
        <errorMessage>CS005: Term Date cannot be lesser than Effective Date</errorMessage>
    </validationRules>
</CustomObject>